--- a/app/src/main/res/layout/fragment_game_area.xml
+++ b/app/src/main/res/layout/fragment_game_area.xml
@@ -20,10 +20,11 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
+        android:layout_width="204dp"
+        android:layout_height="80dp"
+        android:layout_marginBottom="70dp"
         android:text="Button"
+        android:textColor="@android:color/background_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
